--- a/views/reload_page.html
+++ b/views/reload_page.html
@@ -13,7 +13,7 @@
 
 <ul>
     {% for item in pic %}
-     <li> <img src="../public/image/{{item}}" ></li>
+     <li> <img src="/{{item}}" ></li>
 
     {% else %}
     <li> no</li>
