--- a/views/reload_page.html
+++ b/views/reload_page.html
@@ -12,7 +12,7 @@
 </form>
 
 <ul>
-    {% for item in pic %}
+    {% for item in pictures %}
      <li> <img src="/{{item}}" ></li>
 
     {% else %}
